welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:4: error: value and is not a member of Boolean
  }else if (isMorning and !isMom){
                      ^