welcome.lessons.welcome.bat.bool2.AnswerCell.scala.code
def answerCell(isMorning:Boolean, isMom:Boolean, isAsleep:Boolean):Boolean = {
  if(isAsleep){
    return false
  }else if (isMorning and !isMom){
    return false
  }else {
    return true
  }
}